2/2/12 simsharing: factor out duplication of component/type/action throughout SimSharingJ* classes
2/2/12 #3223, simplify SimSharingDragListener, which retaining same functionality (ability to specify IUserComponent and customize ParameterSet)
2/2/12 #3223, make Property* Swing components subclass SimSharingJ*, replace and delete SimSharingProperty* classes
2/2/12 i18n of WavelengthControl
1/27/12 Simsharing: Added basic authentication, see #3231
1/26/12 Simsharing: Added study for dallas that requires user id
1/26/12 Simsharing: Fixed: study name not detected correctly
1/25/12 Simsharing: resolves #3228, handle unknown host exception
1/24/12 Simsharing: #3224, turn off specific MongoDB loggers
1/24/12 Simsharing: removed logManager reset call, resolves #3224
1/23/12 Simsharing: add convenience constructors for creating IUserComponent from Object and Class
1/19/12 Simsharing: Send "enabled" flag from SimSharingIcon.  Send events from mouse presses on disabled swing components. See #3218
1/19/12 Simsharing: Cleanly shutdown and finish sending messages to mongo server before the application exits
1/18/12 Simsharing: refinements to builder pattern for parameter sets
1/18/12 Simsharing: add UserComponentType to UserMessages, delete IComponentType
1/17/12 added NonInteractiveEventListener for sending non-interactive sim-sharing messages on Swing components and phetgraphics sprites
1/17/12 added SimSharingLinearValueControl (implementation identical to SimSharingLogarithmicValueControl! bad!)
1/17/12 add start/EndDrag messages to SimSharingLogarithmicValueControl, cleanup and simplify the sim-sharing hooks in AbstractValueControl
1/17/12 use HALF_UP (nearest neighbor) rounding in DefaultDecimalFormat
1/12/12 Simsharing: Added IP address lookup
1/12/11 SimSharing: #3216, support customization of Swing drag listeners via both subclassing and mutation
1/12/12 Simsharing: Added an option to auto-save data collection log, see #3215